"fixed the weird layout on small devices"

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,8 @@
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
       var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert)
       var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-      height: 100%;
+  }
+  .hide-component {
+    display: none;
   }
 }
